--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <ul class="nav navbar-nav navbar-right">
           <li id='controls'>
-            <b>WASD</b> move, <b>ARROWS</b> or <b>CLICK</b> steering, <b>R|F</b> up | down, <b>Q|E</b> roll
+            <b>WASD</b> move, <b>R|F</b> up | down, <b>Q|E</b> roll, <b>mouse</b> pitch | yaw
           </li>
 
           <li id='log-out-btn'>
@@ -154,6 +154,19 @@
   </div>
 
   <script src="./bundle.js"></script>
+
+  <!-- google analytics -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-75645287-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+
 </body>
 
 </html>
