--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <ul class="nav navbar-nav navbar-right">
           <li id='controls'>
-            <b>WASD</b> move, <b>R|F</b> up | down, <b>Q|E</b> roll, <b>mouse</b> pitch | yaw
+            <b>WASD</b> move, <b>ARROWS</b> or <b>CLICK</b> steering, <b>R|F</b> up | down, <b>Q|E</b> roll
           </li>
 
           <li id='log-out-btn'>
@@ -155,7 +155,7 @@
 
   <script src="./bundle.js"></script>
 
-  <!-- google analytics -->
+  <!-- google analytics   -->
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
